--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,9 +2,6 @@
 	padding-left: 20px;
 }
 .signOut {
-	/*position: absolute; */
-	/*top: 24px; */
-	/*right: 75.5px; */
 	float: right;
 	color: white;
 	height: 75.5px;
@@ -15,4 +12,8 @@
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: lighter;
+}
+
+.center-text {
+	text-align: center;
 }
